<resources>
    <string name="app_name">Contact Tracker</string>

    <!-- Strings genéricos -->
    <string name="apply">Aplicar</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="minutes">Minutos</string>
    <string name="seconds">Segundos</string>
    <string name="meters">Metros</string>
    <string name="lat">Latitud</string>
    <string name="lng">Longitud</string>
    <string name="hour">Hora</string>
    <string name="accuracy">Precisión</string>
    <string name="minSecsText">%1$d min %2$d sec</string>
    <string name="percentText">%.2f %%</string>
    <string name="m">%.2f m</string>
    <string name="genericError">Ha ocurrido un error</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>

    <!-- Strings de cantidad / plurales -->
    <plurals name="daysText">
        <item quantity="one">%d día</item>
        <item quantity="other">%d días</item>
...

    <!-- Preferences: Notificaciones de positivos -->
    <string name="shared_prefs_positives_notifications">PositivesNotifications</string>

    <!-- Bottom Navigation Menu -->
    <string name="bottom_menu_item_1">Rastreador</string>
    <string name="bottom_menu_item_2">Positivo</string>
    <string name="bottom_menu_item_3">Contactos</string>
    <string name="bottom_menu_item_4">Histórico</string>


    <!-- Default Blank Fragment -->
    <string name="default_blank_fragment">DEFAULT BLANK FRAGMENT</string>
...
    <string name="notifyAPositive">Notificar un positivo</string>
    <string name="genericErrorNotifyPositive">Ha habido un error al notificar el positivo. No ha sido posible subir las localizaciones a la nube.</string>
    <string name="notifyExplanation1">Registra que has dado positivo en la aplicación para que tus localizaciones registradas en los últimos días se suban a la nube.</string>
    <string name="notifyExplanation2">Opcionalmente puedes adjuntar tus datos personales, los cuales quedarán asociados a tus localizaciones. De este modo, contribuyes a facilitar las tareas de rastreo realizadas por el personal sanitario.</string>
    <string name="notifyExplanation3">Tus datos personales están protegidos de acuerdo con nuestra política de privacidad.</string>
    <string name="notifyExplanation4">Se subirán a la nube todas tus localizaciones registradas en los últimos:</string>
    <string name="btnNotifyPositive">He dado positivo</string>
    <string name="addPersonalData">Adjuntar mis datos personales</string>
    <string name="loadingPlaceholderNotifyPositive">Subiendo tus localizaciones a la nube...</string>
    <string name="notifyPositiveResultText">Se han subido %d localizaciones a la nube.</string>
    <string name="errorNotifyLimitExceeded">Se ha superado el límite de notificación. No podrás notificar más positivos hasta pasados %d días.</string>
    <string name="errorNotifyNoLocations">No se ha podido notificar el positivo: no existen localizaciones registradas en el periodo de infectividad. Activa el servicio de rastreo para registrar localizaciones.</string>
    <string name="seePrivacyPolicy">Consulta nuestra</string>

    <!-- Formulario de Datos Personales -->
    <string name="personalDataTitle">Introduce tus datos personales</string>
    <string name="personalDataExplanation">Al introducir tus datos estás facilitando las actividades de rastreo de COVID-19. Tus datos personales quedarán asociados a las localizaciones que se suban a la nube. </string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="dni">DNI</string>
    <string name="phoneNumber">Número de teléfono</string>
    <string name="city">Localidad</string>
...
    <string name="hide_markers">Ocultar marcadores</string>
    <string name="show_markers">Mostrar marcadores</string>
    <string name="markers">Marcadores</string>


    <!-- Política de Privacidad -->
    <string name="personalDataConsent">Consentimiento de Protección de Datos</string>
    <string name="personalDataRationale">Esta aplicación utiliza tus datos personales asociados a las localizaciones registradas
        para facilitar y mejorar las tareas de rastreo por parte de las autoridades sanitarias. Estos datos personales serán subidos a la nube una
        vez notifiques un resultado positivo y quedarán asociados a tus ubicaciones.</string>
    <string name="personalDataRationale2">Si lo deseas puedes optar por no indicar tus datos personales y
        notificar que has dado positivo de manera anónima.</string>

...
        sobre protección de datos de la LOPD/GDD de 2018 necesitamos tu consentimiento
        voluntario para llevar a cabo el tratamiento de dichos datos personales de forma lícita.</string>

    <string name="privacyPolicyAgreement">Al aceptar, estás confirmando que tienes más de 14 años y que estás de acuerdo
    con el tratamiento de los datos personales aportados y con nuestra Política de Privacidad.</string>
    <string name="privacyPolicy">Política de Privacidad</string>
    <string name="agree">Sí, estoy de acuerdo</string>
    <string name="cancelAgree">No, gracias</string>

    <!-- Fragment: Resultados de la Comprobación de Contactos de Riesgo -->
    <string name="riskPercentPlaceholder">0%</string>
    <string name="txtCheckHour">Hora de la comprobación</string>
    <string name="txtRiskPercent">Riesgo más alto</string>
    <string name="contactWith">Contacto con:</string>
...

    <!-- Preferencias de notificaciones -->
    <string name="enable_positives_notifications_title">Notificaciones de positivos</string>
    <string name="positives_notifications_summary">Habilita el envío de notificaciones diarias acerca del número de positivos que se han notificado ese día.</string>

    <!-- Diálogo de preguntas de notificación de positivos -->
    <string name="question_asymptomatic">¿Has tenido síntomas de COVID-19?</string>
    <string name="answer_asymptomatic_1">Sí, he tenido síntomas.</string>
    <string name="answer_asymptomatic_2">No, soy asintomático.</string>
    <string name="question_vaccinated">¿Estás vacunado contra el COVID-19?</string>
    <string name="answer_vaccinated_1">Sí, estoy vacunado.</string>
    <string name="answer_vaccinated_2">No, aún no estoy vacunado.</string>

    <!-- Canales de notificaciones (Android Oreo +) -->
    <string name="fcm_channel_id">FcmNotificationChannel</string>

    <!-- Mensajes Debug para la subscripción de Topics de FCM -->
    <string name="fcm_subscribe_success">Cliente Android suscrito al Topic [%s]</string>
...
