<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <!-- Pregunta 1: Asintomático -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_asymptomatic"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textSize="18sp"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleLine="true"
        app:singleSelection="true"
        app:selectionRequired="true">
        <com.google.android.material.chip.Chip
            android:id="@+id/q1Yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:checked="true"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:checkedIconEnabled="true"
            style="@style/Widget.MaterialComponents.Chip.Choice"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/q1No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_asymptomatic_2"
            app:checkedIconEnabled="true"
            style="@style/Widget.MaterialComponents.Chip.Choice"/>
    </com.google.android.material.chip.ChipGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginVertical="8dp"/>

    <!-- Pregunta 2: Vacunado -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_vaccinated"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textSize="18sp"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleLine="true"
        app:singleSelection="true"
        app:selectionRequired="true">
        <com.google.android.material.chip.Chip
            android:id="@+id/q2Yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:checked="true"
            app:chipStartPadding="10dp"
            app:chipEndPadding="10dp"
            app:checkedIconEnabled="true"
            style="@style/Widget.MaterialComponents.Chip.Choice"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/q2No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_vaccinated_2"
            app:checkedIconEnabled="true"
            style="@style/Widget.MaterialComponents.Chip.Choice"/>
    </com.google.android.material.chip.ChipGroup>
</LinearLayout>